--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,6 +1,5 @@
 [supervisord]
 nodaemon=true
-logfile=/dev/stdout
 pidfile=/tmp/supervisord.pid
 logfile_maxbytes = 0
 
@@ -8,8 +7,8 @@ logfile_maxbytes = 0
 command=airflow webserver
 autostart=true
 autorestart=true
-stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
+stdout_logfile=/var/log/supervisor/%(program_name)s.log
+stderr_logfile=/var/log/supervisor/%(program_name)s.log
 stdout_logfile_maxbytes=0
 stderr_logfile_maxbytes=0
 stopwaitsecs=20
@@ -18,8 +17,8 @@ stopwaitsecs=20
 command=sh -c "sleep 30 && airflow scheduler"
 autostart=true
 autorestart=true
-stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
+stdout_logfile=/var/log/supervisor/%(program_name)s.log
+stderr_logfile=/var/log/supervisor/%(program_name)s.log
 stdout_logfile_maxbytes=0
 stderr_logfile_maxbytes=0
 stopwaitsecs=20
